--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
                     <h1>Resume</h1>
                     <p>En total this is my website and who wants to contact me he must send his informations in the
                         contact section</p>
+                        <img src="https://cdn.mos.cms.futurecdn.net/HkdMToxijoHfz4JwUgfh3G-1200-80.jpg" alt="">
                     </section>
 
                 <!--Section Contact-->
