--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                     <li><a href="#about">about</a></li>
                     <li><a href="#work">work</a></li>
                     <li><a href="#resume">Resume</a></li>
-                    <li><a href="contact">Contact</a></li>
+                    <li><a href="#contact">Contact</a></li>
                 </ul>
             </nav>
             <header />
