--- a/index.html
+++ b/index.html
@@ -3,14 +3,15 @@
 
 <head>
     <title>workshop HTML</title>
+    <link rel="stylesheet" href="styles.css" />
 </head>
 
 <body>
 
-    
-    <<!-- Barre de navigation -->
+
+    <!-- Barre de navigation -->
         <header>
-            <nav>
+            <nav class="navbar">
                 <ul>
                     <li>home</li>
                     <li><a href="#about">about</a></li>
@@ -22,14 +23,15 @@
             <header />
             <main>
                 <!--Section About-->
-                <section id="about">
+                <section class="aboutmyself" id="about">
                     <h1>About</h1>
                     <p>Hello i'm majd,i'm 19 years old,and i'm coding student</p>
                     <p>This is my first website</p>
+                    <img src="https://media.direct.playstation.com/is/image/psdglobal/PS5-Slim-Hero-4" alt="">
                 </section>
 
                 <!--Section Work-->
-                <section id="work">
+                <section class="workbuy"  id="work">
                     <h1>Work</h1>
                     <p>Now i'm working on a small project :"playstation online marketing"</p>
                     <table border="1">
@@ -57,11 +59,10 @@
                     <h1>Resume</h1>
                     <p>En total this is my website and who wants to contact me he must send his informations in the
                         contact section</p>
-                        <img src="https://cdn.mos.cms.futurecdn.net/HkdMToxijoHfz4JwUgfh3G-1200-80.jpg" alt="">
-                    </section>
+                </section>
 
                 <!--Section Contact-->
-                <section id="contact">
+                <section class="callme"   id="contact">
                     <h1>Contact</h1>
                     <form>
                         <label>Name:</label>
